# ContextHub

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  alembic.ini  docker-compose.opengauss.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_force_row_level_security.py
bridge/: README.md  openclaw.plugin.json  package-lock.json  package.json
bridge/src/: bridge.ts  index.ts  openclaw.d.ts  sidecar.py  tools.ts
docs/: local-setup&end2end-verification-guide.md  mvp-verification-plan.md  opengauss-compatibility-report.md
docs/design and development/: development-guide-zh.md  development-guide.md
docs/mvp verification/: mvp-verification-plan.md  mvp-video-plan.md
docs/proposals/: long-context-management-proposal.md
docs/research/: research-positioning.md
docs/setup/: local-setup&end2end-verification-guide-zh.md  openclaw-integration-guide-zh.md  openclaw-integration-guide.md  opengauss-setup-guide-zh.md
opengauss/: vector_async_gaussdb.py
plan/: 00-about.md  00-index.md  00a-canonical-invariants.md  01-storage-paradigm.md  02-information-model.md  03-datalake-management.md  04-multi-agent-collaboration.md  05-access-control-audit.md  06-change-propagation.md  07-feedback-lifecycle.md  08-architecture.md  09-implementation-plan.md  10-code-architecture.md  11-long-document-retrieval.md  12-evolution-notes.md  13-related-works.md  14-adr-backlog-register.md  session-raodmap.md
plugins/openclaw/: pyproject.toml
plugins/openclaw/src/openclaw/: __init__.py  plugin.py  tools.py
scripts/: benchmark_workflow.py  demo_e2e.py
sdk/: pyproject.toml
sdk/src/contexthub_sdk/: __init__.py  client.py  exceptions.py  models.py
src/contexthub/: __init__.py  config.py  errors.py  main.py
src/contexthub/api/: deps.py  middleware.py
src/contexthub/db/: compat.py  pool.py  repository.py
src/contexthub/generation/: __init__.py  base.py
src/contexthub/llm/: __init__.py  base.py  factory.py
task-prompt/: task1_prompt.md
tests/: test_db_compat.py  test_integration_propagation.py  test_memory_promote.py  test_plugin.py  test_propagation.py  test_sdk.py  test_skill_resolution.py  test_task2_regressions.py
(+24 files in other folders)
