[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contexthub-sdk"
version = "0.1.0"
description = "Typed async Python client for ContextHub Server"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contexthub_sdk"]
